--- a/app/src/main/res/layout/item_comentario.xml
+++ b/app/src/main/res/layout/item_comentario.xml
@@ -17,7 +17,7 @@
         android:background="@color/colorPrimary">
 
         <LinearLayout
-            android:layout_width="379dp"
+            android:layout_width="350dp"
             android:layout_height="221dp"
             android:background="@android:color/holo_blue_light"
             android:orientation="vertical">
@@ -27,10 +27,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textAlignment="center"
                 android:textSize="20dp"
-
-
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
             <me.zhanghai.android.materialratingbar.MaterialRatingBar
@@ -40,26 +38,38 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
 
+
                 />
 
-            <TextView
-                android:id="@+id/txt_mensj_creado"
-                android:layout_width="358dp"
-                android:layout_height="140dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginEnd="6dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="5dp"
-                android:background="@android:color/background_light"
-                android:gravity="center"
-                android:inputType="textMultiLine"
-                android:paddingEnd="5dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:paddingStart="5dp"
-                android:text="1"
-                android:textAlignment="center"
-                android:textSize="15dp" />
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/txt_mensj_creado"
+                        android:layout_width="299dp"
+                        android:layout_height="140dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginEnd="6dp"
+                        android:layout_marginStart="6dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@android:color/background_light"
+                        android:gravity="center"
+                        android:inputType="textMultiLine"
+                        android:paddingEnd="5dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
+                        android:paddingStart="5dp"
+                        android:text="1"
+                        android:textAlignment="center"
+                        android:textSize="15dp" />
+                </LinearLayout>
+            </ScrollView>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
