--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#33cc33"
-        android:endColor="#33cc33"
-        android:startColor="#33cc33"
+        android:centerColor="#FAE187"
+        android:endColor="	#FAE187"
+        android:startColor="		#FAE187"
         android:type="linear" />
 </shape>
