--- a/app/src/main/res/layout/activity_visualizar_receta.xml
+++ b/app/src/main/res/layout/activity_visualizar_receta.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EDE5C1"
     tools:context=".VisualizarReceta">
 
 
@@ -28,14 +29,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0">
+
             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imagen_foto_receta_vista"
                 android:layout_width="181dp"
                 android:layout_height="115dp"
-                android:layout_gravity="center"
 
                 android:layout_centerInParent="true"
-                app:civ_border_color="#FF000000"
+
+                android:layout_gravity="center"
+                app:civ_border_color="@color/red_btn_bg_pressed_color"
                 app:civ_border_width="2dp" />
 
             <me.zhanghai.android.materialratingbar.MaterialRatingBar
@@ -69,7 +72,7 @@
                 android:text="Costillas en salsa BBQ."
                 android:textAlignment="center"
 
-                android:textColor="@color/red_press"
+                android:textColor="@color/custom_float_bg"
                 android:textSize="35dp"
                 android:textStyle="bold" />
 
@@ -91,7 +94,7 @@
                 android:text="Ingredientes"
                 android:textAlignment="center"
 
-                android:textColor="@color/marron"
+                android:textColor="@color/material_deep_teal_50"
                 android:textSize="25dp"
                 android:textStyle="bold" />
 
@@ -117,14 +120,14 @@
                 android:text="Elaboracion"
                 android:textAlignment="center"
 
-                android:textColor="@color/marron"
+                android:textColor="@color/main_blue_color"
                 android:textSize="25dp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txt_elaboracion_receta_vista"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
                 android:layout_marginEnd="6dp"
                 android:layout_marginStart="6dp"
@@ -206,14 +209,14 @@
                     app:layout_constraintVertical_bias="0.888">
 
                     <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/btn_like"
+                        android:layout_width="367dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         app:srcCompat="@drawable/like" />
 
                     <ImageView
-                        android:id="@+id/imageView3"
+                        android:id="@+id/btn_cesta"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -235,19 +238,65 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Puntúala"
+                    android:textAlignment="center"
+                    android:textSize="20dp"
+                    android:textColor="@color/red_btn_bg_pressed_color"
+                    tools:layout_editor_absoluteX="26dp"
+                    tools:layout_editor_absoluteY="1236dp" />
+
+                <EditText
+                    android:id="@+id/txt_nuevo_comentario"
+                    android:layout_width="match_parent"
+                    android:layout_height="101dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginEnd="6dp"
+                    android:layout_marginStart="6dp"
+                    android:background="@color/sweet_dialog_bg_color"
+                    android:gravity="center"
+                    android:inputType="textMultiLine"
+                    android:paddingTop="30dp"
+                    android:textAlignment="center"
+                    android:textSize="15dp" />
+
+                <me.zhanghai.android.materialratingbar.MaterialRatingBar
+                    android:id="@+id/rating_puntuacion_nuevareceta"
+                    style="@style/Widget.MaterialRatingBar.RatingBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginRight="4dp" />
+
+                <Button
+                    android:id="@+id/btn_enviar_comentario"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Enviar"
+                    tools:layout_editor_absoluteX="88dp"
+                    tools:layout_editor_absoluteY="1331dp" />
+
+                <TextView
                     android:id="@+id/textView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="Comentarios"
                     android:textAlignment="center"
+                    android:textColor="@android:color/holo_green_dark"
                     android:textSize="25dp"
                     android:textStyle="bold" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recicler_comentarios"
                     android:layout_width="380dp"
-                    android:layout_height="485dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginEnd="5dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
@@ -260,50 +309,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:paddingTop="25dp">
-
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Que te ha parecido la receta"
-                        android:textAlignment="center"
-                        android:textSize="15dp"
-                        tools:layout_editor_absoluteX="26dp"
-                        tools:layout_editor_absoluteY="1236dp" />
-
-                    <me.zhanghai.android.materialratingbar.MaterialRatingBar
-                        android:id="@+id/rating_puntuacion_nuevareceta"
-                        style="@style/Widget.MaterialRatingBar.RatingBar"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginLeft="4dp"
-                        android:layout_marginRight="4dp" />
-
-                    <EditText
-                        android:id="@+id/txt_nuevo_comentario"
-                        android:layout_width="match_parent"
-                        android:layout_height="101dp"
-                        android:layout_marginBottom="15dp"
-                        android:layout_marginEnd="6dp"
-                        android:layout_marginStart="6dp"
-                        android:gravity="center"
-                        android:inputType="textMultiLine"
-                        android:paddingTop="30dp"
-                        android:textAlignment="center"
-                        android:textSize="15dp" />
-
-                    <Button
-                        android:id="@+id/btn_enviar_comentario"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Enviar"
-                        tools:layout_editor_absoluteX="88dp"
-                        tools:layout_editor_absoluteY="1331dp" />
+                    android:paddingTop="20dp">
 
 
                 </LinearLayout>
