--- a/app/src/main/res/layout/item_comentario.xml
+++ b/app/src/main/res/layout/item_comentario.xml
@@ -17,9 +17,9 @@
         android:background="@color/colorPrimary">
 
         <LinearLayout
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="221dp"
-            android:background="@android:color/holo_blue_light"
+            android:background="@color/blue_btn_bg_pressed_color"
             android:orientation="vertical">
 
             <TextView
@@ -27,8 +27,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textSize="20dp"
                 android:textAlignment="center"
+                android:textSize="20dp"
                 android:textStyle="bold" />
 
             <me.zhanghai.android.materialratingbar.MaterialRatingBar
@@ -52,7 +52,7 @@
 
                     <TextView
                         android:id="@+id/txt_mensj_creado"
-                        android:layout_width="299dp"
+                        android:layout_width="362dp"
                         android:layout_height="140dp"
                         android:layout_marginBottom="5dp"
                         android:layout_marginEnd="6dp"
