--- a/app/src/main/res/layout/nav_header_drawler.xml
+++ b/app/src/main/res/layout/nav_header_drawler.xml
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
+            android:textColor="@color/colorPrimaryDark"
             android:layout_marginBottom="27dp"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
