--- a/app/src/main/res/menu/activity_drawler_drawer.xml
+++ b/app/src/main/res/menu/activity_drawler_drawer.xml
@@ -6,15 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Busqueda por ingrediente" />
+            android:icon="@drawable/listacompra"
+            android:title="Cesta de la compra" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Recetario" />
+            android:icon="@drawable/recetas"
+            android:title="Ver recetas" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/misrecetas"
             android:title="Mis recetas" />
         <item
             android:id="@+id/nav_manage"
