--- a/app/src/main/res/drawable/rounded_button_solid.xml
+++ b/app/src/main/res/drawable/rounded_button_solid.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <corners android:radius="5dp" />
-    <solid android:color="#ECCEAD" />
+    <solid android:color="#FCDFA7" />
     <stroke
         android:width="2dp"
         android:color="#B3D0D4" />
