--- a/app/src/main/res/layout/activity_crear_receta.xml
+++ b/app/src/main/res/layout/activity_crear_receta.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#dabc50"
+    android:background="#FFFBC5"
     android:paddingLeft="10dp"
     android:paddingRight="10dp">
 
