--- a/app/src/main/res/layout/activity_visualizar_receta.xml
+++ b/app/src/main/res/layout/activity_visualizar_receta.xml
@@ -143,8 +143,7 @@
 
                 <LinearLayout
                     android:layout_width="346dp"
-                    android:layout_height="63dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_height="21dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
@@ -155,27 +154,9 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="138dp"
-                        android:layout_height="27dp"
-                        android:layout_marginBottom="76dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_weight="1"
-                        android:text="Añadir a favoritas"
-                        android:textAlignment="center"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.045"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.465" />
-
-                    <TextView
                         android:id="@+id/textView4"
                         android:layout_width="138dp"
-                        android:layout_height="36dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginBottom="76dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
@@ -189,12 +170,13 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.488" />
+
                 </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/linearLayout3"
                     android:layout_width="match_parent"
-                    android:layout_height="66dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
@@ -208,19 +190,12 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.888">
 
-                    <ImageView
-                        android:id="@+id/btn_like"
-                        android:layout_width="367dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/like" />
-
-                    <ImageView
+                    <Button
                         android:id="@+id/btn_cesta"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        app:srcCompat="@drawable/cesta" />
+                        android:text="Agregar" />
                 </LinearLayout>
 
             </android.support.constraint.ConstraintLayout>
@@ -256,10 +231,8 @@
                     android:layout_marginEnd="6dp"
                     android:layout_marginStart="6dp"
                     android:background="@color/sweet_dialog_bg_color"
-                    android:gravity="center"
                     android:inputType="textMultiLine"
                     android:paddingTop="30dp"
-                    android:textAlignment="center"
                     android:textSize="15dp" />
 
                 <me.zhanghai.android.materialratingbar.MaterialRatingBar
