--- a/app/src/main/res/layout/fragment_cesta.xml
+++ b/app/src/main/res/layout/fragment_cesta.xml
@@ -17,12 +17,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="502dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
+            android:background="#F7F1C6"
             android:orientation="vertical">
 
             <TextView
@@ -30,6 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
+                android:textColor="@color/cardview_dark_background"
                 android:textSize="18dp" />
         </LinearLayout>
     </ScrollView>
