--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -12,10 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="95dp" />
+        android:layout_marginTop="112dp" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar3"
@@ -23,11 +20,11 @@
         android:layout_height="85dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="18dp"
 
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:background="@color/colorPrimary"
+        android:minHeight="40dp"
+        android:theme="@style/AppTheme" />
 
     <TextView
         android:id="@+id/textView6"
