--- a/app/src/main/res/layout/item_comentario.xml
+++ b/app/src/main/res/layout/item_comentario.xml
@@ -9,7 +9,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="218dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
@@ -18,8 +18,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="221dp"
-            android:background="@color/blue_btn_bg_pressed_color"
+            android:layout_height="wrap_content"
+            android:background="	#D8DED4"
             android:orientation="vertical">
 
             <TextView
@@ -27,7 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textAlignment="center"
+
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
@@ -36,7 +36,6 @@
                 style="@style/Widget.MaterialRatingBar.RatingBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
 
 
                 />
@@ -50,26 +49,35 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/txt_mensj_creado"
-                        android:layout_width="362dp"
-                        android:layout_height="140dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginEnd="6dp"
-                        android:layout_marginStart="6dp"
-                        android:layout_marginTop="5dp"
-                        android:background="@android:color/background_light"
-                        android:gravity="center"
-                        android:inputType="textMultiLine"
-                        android:paddingEnd="5dp"
-                        android:paddingLeft="5dp"
-                        android:paddingRight="5dp"
-                        android:paddingStart="5dp"
-                        android:text="1"
-                        android:textAlignment="center"
-                        android:textSize="15dp" />
                 </LinearLayout>
             </ScrollView>
+
+            <TextView
+                android:id="@+id/txt_mensj_creado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="5dp"
+                android:background="@android:color/background_light"
+
+                android:inputType="textMultiLine"
+                android:paddingEnd="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingStart="5dp"
+                android:text="1"
+
+                android:textSize="15dp" />
+
+            <TextView
+                android:id="@+id/txt_fecha_publicacion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textColor="@color/cardview_dark_background" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
