--- a/app/src/main/res/layout/item_receta.xml
+++ b/app/src/main/res/layout/item_receta.xml
@@ -20,6 +20,7 @@
             android:layout_height="match_parent">
 
             <RelativeLayout
+                android:id="@+id/layout_item_receta"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -28,7 +29,7 @@
                 <TextView
                     android:id="@+id/tvNombreReceta"
                     android:layout_width="match_parent"
-                    android:layout_height="64dp"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginLeft="4dp"
@@ -37,7 +38,7 @@
                     android:inputType="textMultiLine"
                     android:text="TextView"
                     android:textAlignment="center"
-                    android:textColorLink="?android:attr/colorActivatedHighlight"
+                    android:textColor="@color/red_btn_bg_pressed_color"
                     android:textSize="22dp"
                     android:textStyle="bold" />
 
@@ -54,17 +55,15 @@
 
                 <TextView
                     android:id="@+id/txtnombre_creador_receta"
-                    android:layout_width="177dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginBottom="58dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
-                    android:textStyle="italic"
-                    android:textColor="@color/red_press"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="57dp"
                     android:text="TextView"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="@color/material_deep_teal_50"
+                    android:textStyle="italic" />
             </RelativeLayout>
 
             <LinearLayout
